# bee

./: .gitignore  CMakeLists.txt  README.md
src/: camera.cpp  camera.hpp  main.cpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  stdafx.hpp
